--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         <article>
           <p>Segundo o INEEP, nos últimos anos, a política de reajustes dos combustíveis ganhou notoriedade no debate público. Por conta do atrelamento de seus preços no Brasil ao valor das cotações externas de petróleo e derivados e das variações no câmbio (preço de paridade de importação, PPI), o brasileiro passou a conviver com uma maior volatilidade e, quando as cotações internacionais estão em alta, com uma rápida subida dos preços da gasolina e do diesel.</p>
           <p>Há alternativas para conter as altas dos preços do petróleo no Brasil, mas essas soluções exigem capacidade de formulação de políticas públicas e uma atuação da Petrobras como um player que priorize o abastecimento interno, não apenas o retorno de curtíssimo prazo.  </p> 
-          <p>A ANP, Agência Nacional do Petróleo, possui um site exclusivo para fornecimento dos históricos dos preços de combustíveis em todo o Brasil.  </p>
+          <p>A ANP, Agência Nacional do Petróleo, possui um site exclusivo para fornecimento dos históricos dos preços de combustíveis em todo o Brasil. Além de outras informações  </p>
           <address>
             É possível consultá-lo através do link: <a href="https://preco.anp.gov.br/">https://preco.anp.gov.br/</a>
           </address>
